# controllers/authorsControllers.js
@@ -20,4 +20,27 @@ const getAllAuthorsController = async (req, res) => {
   }
 };
 
-export { getAllAuthorsController };
+const addAuthorController = async (req, res) => {
+  const { id } = req.params;
+  const { firstName, lastName, dateOfBirth, nationality } = req.body;
+  try {
+    const newAuthor = new Author({
+      firstName,
+      lastName,
+      dateOfBirth,
+      nationality,
+    });
+
+    const savedAuthor = await newAuthor.save();
+    return res.status(201).json({
+      success: true,
+      message: "New Author Created",
+      data: savedAuthor,
+    });
+  } catch (error) {
+    console.log(`Error in addAuthorController ${error.message}`);
+    return res.status(500).json("Internal server error");
+  }
+};
+
+export { getAllAuthorsController, addAuthorController };
